<resources>
    <string name="app_name">Tercer_parcial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gatitos">Gatitos</string>
    <string name="menu_nave1">Nave 1</string>
    <string name="menu_nave2">Nave 2</string>
    <string name="menu_nave3">Nave 3</string>
    <string name="menu_nave4">Nave 4</string>

</resources>